--- a/misty.css
+++ b/misty.css
@@ -1,10 +1,18 @@
 body {
+    display: flex;
+    justify-content: center;
     background-color: black;
+    height: 36vh;
 }
+
 p {
     color: goldenrod;
     font-family: sans-serif;
     font-size: 65px;
     text-align: center;
+}
+
+.word {
+    transition: color 1000ms;
 }
 
