--- a/misty.css
+++ b/misty.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     justify-content: center;
-    background-color: black;
+    background-color: olive;
     height: 36vh;
 }
 
